Main change: Create get ibge aggregated view and serializers; Minor changes: rename templates, add js static, c

--- a/dataProject/metadata.toml
+++ b/dataProject/metadata.toml
@@ -1,55 +1,61 @@
 [territorial_level]
-N1 = 'Brasil'
-N2 = 'Grande Região'
-N3 = 'Unidade da Federação'
-N6 = 'Município'
-N7 = 'Região Metropolitana'
-N8 = 'Mesorregião Geográfica'
-N9 = 'Microrregião Geográfica'
-N10 = 'Distrito'
-N11 = 'Subdistrito'
-N13 = 'Região Metropolitana e Subdivisão'
-N14 = 'Região Integrada de Desenvolvimento'
-N15 = 'Aglomeração Urbana'
-N16 = 'Setor Censitário Demográfico 2010'
-N17 = 'Aglomerado Subnormal'
-N18 = 'Área de Ponderação'
-N20 = 'Área de Divulgação da Amostra para Aglomerados Subnormais'
-N21 = 'Total dos municípios das capitais da Grande Região'
-N22 = 'Total dos municípios das capitais'
-N23 = 'Arranjo Populacional'
-N24 = 'Região Geográfica Intermediária'
-N25 = 'Região Geográfica Imediata'
-N29 = 'Território de Identidade'
-N33 = 'Concentração Urbana'
-N70 = 'Recortes Metropolitanos'
-N71 = 'Categoria Metropolitana'
-N72 = 'Subcategoria Metropolitana'
-N101 = 'País do Mercosul, Bolívia e Chile'
-N102 = 'Bairro'
-N103 = 'Total das áreas - POF'
-N110 = 'Total das áreas - PME'
-N111 = 'Unidade Federativa do Mercosul, Bolívia e Chile'
-N121 = 'Região Hidrográfica'
-N122 = 'Grande Região - PIMES'
-N123 = 'Bioma'
-N124 = "Corpo d'água"
-N125 = 'Terra Indígena por Unidade da Federação'
-N127 = 'Núcleo de desertificação'
-N128 = 'Praia'
-N129 = 'Território da Cidadania'
-N130 = 'Capital/não capital de Unidade da Federação'
-N131 = 'Amazônia Legal'
-N132 = 'Semiárido'
-N133 = 'Semiárido de Unidade da Federação'
-N134 = 'Amazônia Legal de Unidade da Federação'
-N145 = 'Território Quilombola por Unidade da Federação'
-N1100 = 'Brasil, sem especificação de Unidade da Federação'
-N1101 = 'Ignorado'
-N1102 = 'Estrangeiro'
-N1103 = 'Total'
-N1104 = 'Unidade da Federação, sem especificação de Município'
-N1105 = 'Área de influência - PNSB'
-N1124 = 'Coordenação Regional da Funai'
-N1125 = 'Terra Indígena'
-N1145 = 'Território Quilombola'
+
+    [territorial_level.administrative]
+    N1 = "Brasil"
+    N2 = "Grande Região"
+    N3 = "Unidade da Federação"
+    N6 = "Município"
+    N7 = "Região Metropolitana"
+    N8 = "Mesorregião Geográfica"
+    N9 = "Microrregião Geográfica"
+    N10 = "Distrito"
+    N11 = "Subdistrito"
+    N13 = "Região Metropolitana e Subdivisão"
+    N14 = "Região Integrada de Desenvolvimento"
+    N15 = "Aglomeração Urbana"
+
+    [territorial_level.special]
+    N17 = "Aglomerado Subnormal"
+    N23 = "Arranjo Populacional"
+    N29 = "Território de Identidade"
+    N33 = "Concentração Urbana"
+    N101 = "País do Mercosul, Bolívia e Chile"
+    N111 = "Unidade Federativa do Mercosul, Bolívia e Chile"
+    N121 = "Região Hidrográfica"
+    N123 = "Bioma"
+    N124 = "Corpo d'água"
+    N125 = "Terra Indígena por Unidade da Federação"
+    N127 = "Núcleo de desertificação"
+    N128 = "Praia"
+    N129 = "Território da Cidadania"
+    N131 = "Amazônia Legal"
+    N132 = "Semiárido"
+    N133 = "Semiárido de Unidade da Federação"
+    N134 = "Amazônia Legal de Unidade da Federação"
+    N145 = "Território Quilombola por Unidade da Federação"
+    N1124 = "Coordenação Regional da Funai"
+    N1125 = "Terra Indígena"
+    N1145 = "Território Quilombola"
+
+    [territorial_level.ibge]
+    N16 = "Setor Censitário Demográfico 2010"
+    N18 = "Área de Ponderação"
+    N20 = "Área de Divulgação da Amostra para Aglomerados Subnormais"
+    N21 = "Total dos municípios das capitais da Grande Região"
+    N22 = "Total dos municípios das capitais"
+    N24 = "Região Geográfica Intermediária"
+    N25 = "Região Geográfica Imediata"
+    N70 = "Recortes Metropolitanos"
+    N71 = "Categoria Metropolitana"
+    N72 = "Subcategoria Metropolitana"
+    N102 = "Bairro"
+    N103 = "Total das áreas - POF"
+    N110 = "Total das áreas - PME"
+    N122 = "Grande Região - PIMES"
+    N130 = "Capital/não capital de Unidade da Federação"
+    N1100 = "Brasil, sem especificação de Unidade da Federação"
+    N1101 = "Ignorado"
+    N1102 = "Estrangeiro"
+    N1103 = "Total"
+    N1104 = "Unidade da Federação, sem especificação de Município"
+    N1105 = "Área de influência - PNSB"
